--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bootstrap": "^3.3.7",
     "electron": "^1.4.1",
-    "jquery": "^3.1.1"
+    "jquery": "^3.1.1",
+    "nunjucks": "^2.5.2"
   }
 }
